--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shared_preferences: ^2.2.3
   provider: ^6.1.2
   dio: ^5.4.3+1
+  file_selector: ^1.0.3
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
